[package]
name = "holo_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
mongodb = {version = "3.2.0"}
scraper = "0.22.0"
serde = {version = "1.0.217", features = ["serde_derive"]}
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
